--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ warnings_are_errors: true
 
 r_github_packages:
   - jimhester/covr
+
+before_install:
+- openssl aes-256-cbc -K $encrypted_1fc90f464345_key -iv $encrypted_1fc90f464345_iv
+  -in virustotal_api_key.enc -out virustotal_api_key -d
+  
 after_success:
   - Rscript -e 'covr::codecov()'
 
