--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ r_github_packages:
 
 before_install:
 - openssl aes-256-cbc -K $encrypted_1fc90f464345_key -iv $encrypted_1fc90f464345_iv
-  -in virustotal_api_key.enc -out tests/testthat/virustotal_api_key -d
+  -in tests/testthat/virustotal_api_key.enc -out tests/testthat/virustotal_api_key -d
   
 after_success:
   - Rscript -e 'covr::codecov()'
