added scan and rescan file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(domain_report)
 export(file_report)
 export(ip_report)
+export(rescan_file)
+export(scan_file)
+export(scan_url)
 export(set_key)
 export(url_report)
 importFrom(httr,GET)
