updated news + GET, POST

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: virustotal
 Title: R client for the virustotal API
-Version: 0.2
+Version: 0.1.0
 Authors@R: person("Gaurav", "Sood", email = "gsood07@gmail.com", role = c("aut", "cre"))
 Maintainer: Gaurav Sood <gsood07@gmail.com>
 Description: Access VirusTotal, a Google service that analyzes files and URLs for viruses, worms, trojans etc. and also provides category of the content hosted by domain via websense (need a private API key for that). 
@@ -12,7 +12,8 @@ License: MIT + file LICENSE
 LazyData: true
 VignetteBuilder: knitr
 Imports:
-    httr
+    httr,
+    jsonlite
 Suggests:
     knitr,
     rmarkdown,
