--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,7 @@ License: MIT + file LICENSE
 LazyData: true
 VignetteBuilder: knitr
 Imports:
-    httr,
-    jsonlite
+    httr
 Suggests:
     knitr,
     rmarkdown,
