--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,10 @@ Title: R Client for the Virustotal API
 Version: 0.1.0
 Authors@R: person("Gaurav", "Sood", email = "gsood07@gmail.com", role = c("aut", "cre"))
 Maintainer: Gaurav Sood <gsood07@gmail.com>
-Description: Access VirusTotal, a Google service that analyzes files and URLs for viruses, worms, trojans etc. and also provides category of the content hosted by domain via websense, ALexa, bitdefender, among others. 
+Description: Use VirusTotal, a Google service that analyzes files and URLs 
+    for viruses, worms, trojans etc., provides category of the content hosted by a 
+    domain from a variety of prominent services, provides passive DNS information,
+    among other things. See <http://www.virustotal.com> for more information. 
 URL: http://github.com/soodoku/virustotal
 BugReports: http://github.com/soodoku/virustotal/issues
 Depends:
