better error handling, more consistent returns, rate limiting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,6 @@ importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,content)
 importFrom(httr,upload_file)
+importFrom(plyr,ldply)
 importFrom(plyr,rbind.fill)
+importFrom(utils,read.table)
