--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -4,9 +4,28 @@ template:
   params:
     bootswatch: cosmo
   docsearch:
-    api_key: 
+    api_key: 59f51aa86ec968850d822427e20517d5
     index_name: virustotal
 
 authors:
   Gaurav Sood:
     href: https://github.com/soodoku
+
+reference:
+  - title: Authentication
+    contents:
+    - set_key
+  - title: Report
+    desc:  Get reports on IP, Domain, or URL
+    contents:
+    - ends_with("_report")
+  - title: Scan File or URL
+    contents:
+    - starts_with("scan_")
+    - rescan_file
+  - title: Add Comment
+    contents:
+    - add_comments
+  - title: Regression tests
+    contents:
+    - starts_with("test", internal = TRUE)
