--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(get_ip_comments)
 export(get_ip_info)
 export(get_ip_relationship)
 export(ip_report)
+export(post_domain_comments)
 export(post_domain_votes)
 export(post_ip_comments)
 export(rescan_file)
