--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(ip_report)
 export(post_domain_comments)
 export(post_domain_votes)
 export(post_ip_comments)
+export(post_ip_votes)
 export(rescan_file)
 export(scan_file)
 export(scan_url)
