--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(set_key)
 export(url_report)
 importFrom(httr,GET)
 importFrom(httr,POST)
+importFrom(httr,add_headers)
 importFrom(httr,content)
 importFrom(httr,upload_file)
 importFrom(plyr,ldply)
