--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,4 +67,5 @@ importFrom(httr,upload_file)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(rlang,.data)
+importFrom(utils,packageDescription)
 importFrom(utils,read.table)
