--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,20 +1,24 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-.travis.yml
-appveyor.yml
 ^revdep$
 ^\.httr-oauth$
 ^dev$
 ^docs$
-^cran-comments.md$
-^tests\testthat\virustotal_api_key.enc$
+^cran-comments\.md$
+^tests/testthat/virustotal_api_key\.enc$
 ^_pkgdown\.yml$
-.lintr.*
+^\.lintr
 ^CRAN-RELEASE$
-^.github$
+^\.github$
 ^doc$
 ^Meta$
 ^CLAUDE\.md$
 ^Citation\.cff$
 ^CRAN-SUBMISSION$
 ^\.claude$
+^README\.Rmd$
+^\.vscode$
+^\.DS_Store$
+^\.git$
+^\.gitignore$
+^codecov\.yml$
