--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,81 +1,4 @@
-url: https://themains.github.io/virustotal/
-
-exclude: |
-  CLAUDE.md
-  .claude/
-  dev/
-  tests/testthat/virustotal_api_key.enc
-  cran-comments.md
-  CRAN-SUBMISSION
-  CRAN-RELEASE
-
+url: http://themains.github.io/virustotal/
 template:
   bootstrap: 5
-  bslib:
-    primary: "#0969da"
-    border-radius: 0.5rem
-    btn-border-radius: 0.25rem
-  params:
-    docsearch:
-      api_key: 59f51aa86ec968850d822427e20517d5
-      index_name: virustotal
 
-authors:
-  Gaurav Sood:
-    href: https://github.com/soodoku
-
-reference:
-  - title: Authentication
-    contents:
-    - set_key
-  - title: Report
-    desc:  Get reports on IP, Domain, or URL
-    contents:
-    - ends_with("_report")
-  - title: Scan File or URL
-    contents:
-    - starts_with("scan_")
-    - rescan_file
-  - title: File Operations
-    desc: V3 API file operations
-    contents:
-    - get_file_upload_url
-    - download_file
-    - get_file_download_url
-    - get_file_comments
-    - post_file_comments
-    - get_file_votes
-    - post_file_votes
-    - get_file_relationships
-  - title: URL Operations
-    desc: V3 API URL operations
-    contents:
-    - get_url_comments
-    - post_url_comments
-    - get_url_votes
-    - post_url_votes
-    - get_url_relationships
-  - title: Domain Operations
-    desc: V3 API domain operations
-    contents:
-    - get_domain_info
-    - get_domain_comments
-    - post_domain_comments
-    - get_domain_votes
-    - post_domain_votes
-    - get_domain_relationship
-  - title: IP Operations
-    desc: V3 API IP operations
-    contents:
-    - get_ip_info
-    - get_ip_comments
-    - post_ip_comments
-    - get_ip_votes
-    - post_ip_votes
-  - title: Add Comment (Legacy)
-    contents:
-    - add_comments
-  - title: Package Utilities
-    contents:
-    - virustotal_version
-    - virustotal_info
