fix failing tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(virustotal_validation_error)
 export(virustotal_version)
 importFrom(checkmate,assert_character)
 importFrom(checkmate,assert_file_exists)
+importFrom(checkmate,assert_numeric)
 importFrom(dplyr,bind_rows)
 importFrom(httr,GET)
 importFrom(httr,POST)
