no double colons/importfrom

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(virustotal_rate_limit_error)
 export(virustotal_url_scan)
 export(virustotal_validation_error)
 export(virustotal_version)
+importFrom(base64enc,base64encode)
 importFrom(checkmate,assert_character)
 importFrom(checkmate,assert_file_exists)
 importFrom(checkmate,assert_numeric)
@@ -55,9 +56,13 @@ importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
 importFrom(httr,content)
+importFrom(httr,headers)
+importFrom(httr,parse_url)
 importFrom(httr,upload_file)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(rlang,.data)
+importFrom(tools,toTitleCase)
+importFrom(utils,URLencode)
 importFrom(utils,packageDescription)
 importFrom(utils,read.table)
